<resources>
    <string name="Place_API_key">AIzaSyASEp2onrkLsqGpONGfjC6ezqZtkArXmfI</string>
    <string name="app_name">MBS</string>
    <string name="app_name_store57">Michael\'s Liquors</string>
    <string name="app_name_store90">McCabes Wines - Manhattan, NY</string>
    <string name="app_name_store3824">Big Three Liquor – Bronx, NY</string>
    <string name="app_name_store96">Wine Room of Forest Hills</string>
    <string name="app_name_store44">Astoria Liquors</string>
    <string name="app_name_store99">Amazing Grapes</string>
    <string name="app_name_store7365">Computer Perfect</string>
    <string name="app_name_store4473">Adolfo\'s Liquor Store</string>
    <string name="app_name_store178">Montague Wine &amp; Spirits</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="search">search</string>
    <string name="cart">cart</string>
    <string name="wishList">Wish List</string>
    <string name="rewards">Loyalty Rewards</string>
    <string name="Mic">Mic</string>
    <string name="contactus">Contact Us</string>
    <string name="ManageAccount">Manage Account</string>
    <string name="aboutus">About Us</string>
    <string name="inv_change">The inventory availability has changed at the store. </string>
    <string name="please_review">Please review the revised order before continuing.</string>
    <string name="Card_On_File">Card On File</string>
    <string name="no_card_info">A Credit card is not on file and can only be entered at checkout.\nOnce you have made a purchase there is an option to save that data for future purchases.</string>
    <string name="ChangePassword">Change Password</string>
    <string name="PasswordRules">Password Rules</string>
    <string name="PasswordRules_text">Must be between 8-15 characters.</string>
    <string name="event_calender">Event Calender</string>
    <string name="return_eligibility"><b>Return Eligibilty: </b></string>
    <string name="home">Home</string>
    <string name="nav_option5">Option5</string>
    <string name="nav_option6">Option6</string>
    <string name="nav_option7">Option7</string>
    <string name="nav_option8">Option8</string>
    <string name="dialog_message">Loading...</string>
    <string name="dialog_title">@string/app_name</string>
    <string name="Legal_Disclaimer"><u>Legal Disclaimer</u></string>
    <string name="Accessory">Accessory</string>
    <string name="Blenders">Blenders</string>
    <string name="Champagne">Champagne</string>
    <string name="Cordials">Cordials</string>
    <string name="Juices">Juices</string>
    <string name="Liquor">Liquor</string>
    <string name="Miscellaneous">Miscellaneous</string>
    <string name="Mixers">Mixers</string>
    <string name="Mobiles">Mobiles</string>
    <string name="Ovens">Ovens</string>
    <string name="Red_Beer">Red Beer</string>
    <string name="Rum">Rum</string>
    <string name="Soup">Soup</string>
    <string name="Unassigned">Unassigned</string>
    <string name="White_Beer">White Beer</string>
    <string name="Wine">Wine</string>
    <string name="successMsg">success\</string>
    <string name="str_home">Home</string>
    <string name="str_store_hour">Store Hour</string>
    <string name="str_event_calander">Event Calendar</string>
    <string name="str_department">Departments</string>
    <string name="str_notification">Notifications</string>
    <string name="str_network_message">It seems there is an issue with network connectivity. Please try again later.</string>
    <string name="str_email">Email</string>
    <string name="str_hint_password">Password</string>
    <string name="str_signinHeader">Sign In / Create Account</string>
    <string name="str_wishlistHeader">WishList Registration</string>
    <string name="str_registerToWishList">You must register to WishList an item</string>
    <string name="str_forgetPassword">Forgot Password?</string>
    <string name="str_signin">Sign In!</string>
    <string name="str_cap_signin">SIGN IN</string>
    <string name="str_recover_passwrod">RECOVER PASSWORD</string>
    <string name="str_next">NEXT</string>
    <string name="str_prev">PREV</string>
    <string name="str_createaccount">CREATE ACCOUNT</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_back">Back</string>
    <string name="str_submit">SUBMIT</string>
    <string name="str_forget_instruction">Enter your Email and we will send you the Instructions.</string>
    <string name="confirm_email"><![CDATA[Confirm Email  <font color=red>*</font>]]></string>
    <string name="store_close">Delivery not available as it is outside our  </string>
    <string name="delivery_hours"><u> delivery hours </u></string>
    <string name="store_resume"><![CDATA[ <font color=red>Deliveries resume </font>]]></string>
    <string name="str_firstname"><![CDATA[First Name  <font color=red>*</font>]]></string>
    <string name="str_lastname"><![CDATA[Last Name  <font color=red>*</font>]]></string>
    <string name="str_companyname">Company Name</string>
    <string name="str_addressline1"><![CDATA[Address Line 1  <font color=red>*</font>]]></string>
    <string name="str_addressline2">Address Line 2</string>
    <string name="str_zip"><![CDATA[Zip <font color=red>*</font>]]></string>
    <string name="str_city"><![CDATA[City <font color=red>*</font>]]></string>
    <string name="str_state"><![CDATA[State  <font color=red>*</font>]]></string>
    <string name="str_password"><![CDATA[Password <font color=red>*</font>]]></string>
    <string name="str_cnfpassword"><![CDATA[Confirm Password <font color=red>*</font>]]></string>
    <string name="str_signup_instruction">* 8 to 15 Characters  \n* A welcome email will be sent.</string>
    <string name="str_guest_limitations">By selecting the guest option, you will not have access to features: \n • Easy re-ordering \n • Stored credit card if you select to. \n • Ability to quickly cancel orders. \n • Review your in-store &amp; online purchases. \n • Participate in our rewards program, if applicable. \n • Coupons specifically catered to you. \n • Faster order processing. \n • and more…..</string>
    <string name="str_enterpassword">Enter Password</string>
    <string name="speech_prompt">Speak now</string>
    <string name="speech_not_supported">Speech is not supported</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_otp_ins">A One Time Password (OTP) has been emailed to:</string>
    <string name="str_otp">Enter One Time Password</string>
    <string name="str_oops">Oops!</string>
    <string name="str_OK">OK</string>
    <string name="str_cancelorder">CANCEL ORDER</string>
    <string name="str_Cancel">Cancel</string>
    <string name="str_send">SEND</string>
    <string name="str_otp_error">You entered wrong OTP, please try again.</string>
    <string name="str_resend_otp"><![CDATA[<a  style="cursor: pointer"><u>Resend One Time Password</u></a>]]></string>
    <string name="str_seturpassword">Set your Password.</string>
    <string name="str_hint_confirm_password">Confirm Password</string>
    <string name="str_psw_validation1">Password must be between 8 to 15 characters.</string>
    <string name="str_psw_validation2">Password and Confirm Password must be the same.</string>
    <string name="str_password_hint">* 8 to 15 Characters</string>
    <string name="str_signup_validation1">Email ID and Confirm Email ID must be the same.</string>
    <string name="str_signup_validation2">You are missing required information.</string>
    <string name="str_Congratulation">Congratulations!</string>
    <string name="str_Congratulation_indtruct">You have successfully registered.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="str_mobile"><![CDATA[(___) ___-____<font color=red>*</font>]]></string>
    <string name="str_mobile2"><![CDATA[(___) ___-____]]></string>
    <string name="error_network">We were unable to complete your request. Please try again.</string>
    <string name="legend_tax_sales">T = Sales Tax</string>
    <string name="legend_tax_wine">T2 = Wine Tax</string>
    <string name="legend_tax_misc">T3 = Misc Tax</string>
    <string name="legend_tax_flat">T4 = Flat Tax</string>
    <string name="legend_bottle_deposit">D = Bottle Deposit</string>
    <string name="legend_non_taxable">NT = Non-Taxable</string>
    <string name="legend_loyalty_reward">Reward Points Earned on this Purchase</string>
    <string name="lbl_delivery_option">Delivery Options</string>
    <string name="lbl_delivery_details">Delivery Details</string>
    <string name="lbl_billing_shipping_details">Billing/Shipping Details</string>
    <string name="lbl_billing_details">Billing Details</string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_pick_up_at_store">Pick up at Store</string>
    <string name="lbl_pay_at_store">Pay at Store</string>
    <string name="lbl_pay_with_card">Pay with Credit Card</string>
    <string name="lbl_payment_options_title">&#160;<i>Including: \n PayPal \n Google Pay \n Masterpass</i></string>
    <string name="lbl_uber_rush">Uber Rush</string>
    <string name="lbl_hand_delivery">Hand Delivery</string>
    <string name="lbl_hand_del">Hand Delivery</string>
    <string name="lbl_ship">Ship</string>
    <string name="lbl_ship_temporarily"> Temporarily only available on our site: </string>
    <string name="lbl_ship_to_different_address">Ship to a Different Address</string>
    <string name="lbl_no_alternate_address_on_file">No alternate addresses on file.</string>
    <string name="lbl_optional_tip_on_credit_cart">Optional TIP on Credit Card</string>
    <string name="lbl_your_sub_total_is">Your Sub-Total is $ </string>
    <string name="lbl_would_you_like_to_apply_tip_of">Would you like to apply a TIP of</string>
    <string name="lbl_no_tip_on_credit_cart">No TIP on credit card</string>
    <string name="lbl_cash_tip">Cash TIP/No TIP on credit card</string>
    <string name="lbl_custom_tip">Custom Dollar TIP</string>
    <string name="lbl_enter_amt">Enter Amount($)</string>
    <string name="lbl_shipping_service">Select Shipping Service</string>
    <string name="lbl_address_list">Address List</string>
    <string name="lbl_first_name"><![CDATA[First Name  <font color=red>*</font>]]></string>
    <string name="lbl_last_name"><![CDATA[Last Name  <font color=red>*</font>]]></string>
    <string name="lbl_email_title">E-mail : </string>
    <string name="lbl_company_name">Company Name</string>
    <string name="lbl_phone_number_simple">Phone Number : </string>
    <string name="valid_phone_number_simple">Mobile number must be 10 digits</string>
    <string name="lbl_phone_number"><![CDATA[Phone Number  <font color=red>*</font>]]></string>
    <string name="lbl_address1"><![CDATA[Address 1  <font color=red>*</font>]]></string>
    <string name="lbl_address2">Address 2</string>
    <string name="lbl_zip"><![CDATA[Zip <font color=red>*</font>]]></string>
    <string name="lbl_city">City</string>
    <string name="lbl_state">State</string>
    <string name="lbl_city_mendatory"><![CDATA[City <font color=red>*</font>]]></string>
    <string name="lbl_state_mendatory"><![CDATA[State <font color=red>*</font>]]></string>
    <string name="lbl_clear">Clear/Add</string>
    <string name="str_mobile_hint">(___) ___-____</string>
    <string name="lbl_zip_postal"><![CDATA[Zip/Postal <font color=red>*</font>]]></string>
    <string name="lbl_customer_card_error">The credit card services are experiencing technical difficulties. Please try later.</string>
    <string name="shortcut_long_label_open_cart">Open Cart</string>
    <string name="shortcut_short_label_open_cart">Cart</string>
    <string name="shortcut_short_label_open_wishlist">Wishlist</string>
    <string name="shortcut_long_label_open_wishlist">Open Wishlist</string>
</resources>