<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--android:background="@drawable/rounded_corner_login"-->
    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/close"
        android:padding="5dp"
        android:textSize="@dimen/dimen_20"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/txtloginhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_signinHeader"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_forget_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="15dp"
            android:text="@string/str_forget_instruction"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtotperror"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:text="@string/str_otp_error"
            />

        <!--Edited by Janvi 4th oct *********-->

        <TextView
            android:id="@+id/tvRegisterToWishlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/dimen_10"
            android:singleLine="true"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <!--end ************-->

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/llmiddle"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_empid_for_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:hintTextAppearance="@style/InputLayoutSize">

                <AutoCompleteTextView
                    android:id="@+id/edtEmailIDFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_email"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@_."
                    android:paddingBottom="@dimen/dimen_10"
                    android:paddingTop="@dimen/dimen_10"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_empid_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:hintTextAppearance="@style/InputLayoutSize">

                <EditText
                    android:id="@+id/edtEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_hint_password"
                    android:importantForAutofill="no"
                    android:autofillHints="password"
                    android:longClickable="false"
                    android:inputType="textNoSuggestions"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@_."
                    android:paddingBottom="@dimen/dimen_10"
                    android:paddingTop="@dimen/dimen_10"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_15" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:hintTextAppearance="@style/InputLayoutSize">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_hint_password"
                    android:paddingBottom="@dimen/dimen_10"
                    android:paddingTop="@dimen/dimen_10"
                    android:singleLine="true"
                    android:textSize="@dimen/dimen_15" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--android:inputType="textPassword"-->

            <TextView
                android:id="@+id/txtPasswordHint"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/str_password_hint"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_recover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingBottom="@dimen/dimen_5"
                    android:textSize="@dimen/_12sdp"
                    android:paddingTop="@dimen/dimen_10"
                    android:text="@string/str_forgetPassword"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/round_shap_red"
            android:textAllCaps="false"
            android:padding="@dimen/dimen_ButtonPadding"
            android:text="@string/str_next"
            android:textSize="@dimen/dimen_ButtonTextSize"
            android:textColor="@color/White"
            />
        <Button
            android:visibility="gone"
            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_ButtonPadding"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/round_shap_red"
            android:text="@string/str_prev"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_ButtonTextSize"
            android:textColor="@color/White" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="@dimen/dimen_10"
                android:text="@string/str_signin"
                android:textSize="@dimen/dimen_ButtonTextSize"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>