<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/Header"
        android:fitsSystemWindows="true"
        app:backgroundTint="@color/primary"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/White"
        app:itemTextColor="@color/White"

        app:menu="@menu/drawer_menu" >-->
    <!-- <TextView
         android:layout_width="match_parent"
         android:layout_height="96dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="-96dp"
         android:background="#600F"
         android:gravity="center"
         android:text="I STAND BY MY SELF" />-->
    <!-- </android.support.design.widget.NavigationView>-->
    <LinearLayout
        android:id="@+id/lldrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/White"
        android:orientation="vertical">

        <!--   android:background="@color/Header"-->

        <include layout="@layout/header" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">
                    <!-- <LinearLayout
                         android:layout_width="match_parent"
                         android:gravity="center_vertical"
                         android:layout_height="wrap_content">
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_marginLeft="10dp"
                             android:src="@drawable/ic_home"
                             />-->
                    <TextView
                        android:id="@+id/txthome"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="@string/str_home" />
                    <!--  </LinearLayout>-->
                    <TextView
                        android:id="@+id/txtdepartment"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="@string/str_department" />
                    <TextView
                        android:id="@+id/txtNotification"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="@string/str_notification" />
                    <TextView
                        android:id="@+id/txtevent_cal"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="@string/str_event_calander" />

                    <TextView
                        android:id="@+id/tv_menu_wishlist"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="@string/wishList" />

                   <!-- <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:background="#fff" />-->

                    <ExpandableListView
                        android:id="@+id/Manage_expList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:groupIndicator="@drawable/group_indicator_updown"
                        android:dividerHeight="0dp"
                        android:scrollbars="horizontal"
                        />
                    <!--android:indicatorLeft="110dp"-->
                    <!-- android:indicatorLeft="200dp"
                        android:groupIndicator="@drawable/down" -->

                    <ListView
                        android:id="@+id/bottom_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null">

                    </ListView>

                    <!--<TextView
                        android:id="@+id/tv_share_app"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="Share App" />

                    <TextView
                        android:id="@+id/tv_rate_app"
                        style="@style/slider_textview_style"
                        android:textStyle="bold"
                        android:text="Rate App" />-->
                </LinearLayout>
                </ScrollView>
            </LinearLayout>

        <!--   <ListView
               android:id="@+id/lst_menu_items"
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1" />-->
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>