<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <TextView
                android:id="@+id/txtErrorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15"
                android:layout_marginTop="5dp"
                android:text="Updated Item"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtErrorName_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/black" />

            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/lighter_grey"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:id="@+id/ll_Real_time_inventory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_12"
                android:text="@string/inv_change"
                android:textColor="@color/black" />

            <TextView
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_12"
                android:text="@string/please_review"
                android:textStyle="bold"
                android:textColor="@color/black" />
            </LinearLayout>
            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_realtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
            <Button
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_10"
                android:padding="@dimen/dimen_ButtonPadding"
                android:background="@drawable/round_shap_red"
                android:text="@string/str_OK"
                android:textSize="@dimen/dimen_ButtonTextSize"
                android:textAllCaps="false"
                android:textColor="@color/White" />
        </LinearLayout>
    </ScrollView>